<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SQLite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Añadir</string>
    <string name="edit">Editar Contacto</string>
    <string name="delete">Borrar Contacto</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Nombre</string>
    <string name="phone">Tel</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Guardar Empresa</string>
    <string name="deleteContact">¿Está seguro de querer eliminar el registro?.</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usando_sqlite">SQLite</string>
    <string name="moviles">reto 8 Diego Talero</string>
    <string name="web_page">URL</string>
    <string name="servicios">Productos y servicios</string>
    <string name="clasificacion">Clasificación</string>
</resources>